ユーザーの新規登録機能の実装

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -50,3 +50,109 @@ li {
     background-color: #ff7757;
     color: #fff;
 }
+
+/* footer */
+.Footer {
+    align-items: center;
+    background-color: #1c1d3b;
+    display: flex;
+    height: 465px;
+}
+
+.Footer>div {
+    margin-top: 100px;
+}
+
+.Footer__logo {
+    margin-bottom: 16px;
+    width: 294px;
+}
+
+.Footer__copyright {
+    color: #fff;
+    font-family: Lato, sans-serif;
+    font-size: 14px;
+    line-height: 17px;
+    margin-bottom: 0;
+}
+
+/* forms */
+.AccountFormWrapper {
+    background-color: #dfe2e6;
+    display: flex;
+    height: fit-content;
+    min-height: calc(100vh - 80px);
+    padding: 60px 0 120px;
+}
+
+.AccountFormContainer {
+    background-color: #fff;
+    margin: auto;
+    padding: 32px;
+    width: 704px;
+}
+
+.AccountFormContainer__title {
+    font-family: Lato, sans-serif;
+    font-size: 33px;
+    font-weight: 400;
+    line-height: 48px;
+    margin-bottom: 24px;
+    text-align: center;
+}
+
+.Form__label--required:after {
+    content: "*";
+    color: #ff4949;
+    font-size: 14px;
+    margin-left: 4px;
+}
+
+.AccountForm__button {
+    border-radius: 12px;
+    padding: 14px 24px;
+    width: 100%;
+}
+
+.AccountForm__button--primary {
+    align-items: center;
+    border-radius: 12px;
+    display: flex;
+    justify-content: center;
+    height: 58px;
+    font-size: 18px;
+    background-color: #ff7757;
+    color: #fff;
+}
+
+.AccountForm__button--secondary {
+    border: 1px solid #e0e0e0;
+    color: #6a6a6a;
+    line-height: 44px;
+    font-size: 16px;
+    line-height: 24px;
+    height: 52px;
+}
+
+#error_explanation {
+    color: red;
+    ul {
+        color: red;
+        margin: 0 0 30px 0;
+    }
+}
+
+.field_with_errors {
+    .has-error {
+        color: red;
+    }
+}
+
+/* miscellaneous */
+
+.debug_dump {
+    clear: both;
+    float: left;
+    width: 100%;
+    margin-top: 45px;
+}
