--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,17 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="FirstView">
+    <section class="container">
+        <h2 class="FirstView__title">
+            Potepan Shareで
+            <br>
+            まだ体験したことのない
+            <br>
+            旅をしよう
+        </h2>
+        <div class="FirstViewSearch">
+            <%= form_with do |f| %>
+                <%= f.text_field "area", class: "form-control FirstViewSearch__input" %>
+                <%= f.submit "検索", class: "btn FirstViewSearch__button" %>
+            <% end %>
+        </div>
+    </section>
+</div>
